--- a/achievements.html
+++ b/achievements.html
@@ -16,22 +16,16 @@
                 <li><a href="research.html">Research</a></li>
                 <li><a href="achievements.html">Achievements</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="https://raw.githubusercontent.com/Koustav-Chowdhury73/koustav.github.io/main/cv.pdf" download>CV</a></li>
+                <li><a href="cv.pdf" download>CV</a></li>
                 <li><a href="https://scholar.google.com" target="_blank">Google Scholar</a></li>
                 <li><a href="https://github.com/Koustav-Chowdhury73" target="_blank">GitHub</a></li>
             </ul>
         </nav>
     </header>
 
-    <main>
-        <section class="achievements-section">
-            <h2>Achievements</h2>
-            <ul>
-                <li>Visiting Research Scholar, Carnegie Mellon University, Summer 2024</li>
-                <li>Research Fellow, Indian Institute of Science (IISc), Bangalore, Summer 2022</li>
-                <li>Worked with Professors Subhajit Dutta and Nikhil R. Pal</li>
-            </ul>
-        </section>
+    <main style="padding: 40px 5%;">
+        <h2>Achievements</h2>
+        <p>Coming soon: highlights of awards, scholarships, and competitive milestones.</p>
     </main>
 
     <footer>
