--- a/contact.html
+++ b/contact.html
@@ -16,18 +16,17 @@
                 <li><a href="research.html">Research</a></li>
                 <li><a href="achievements.html">Achievements</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="https://raw.githubusercontent.com/Koustav-Chowdhury73/koustav.github.io/main/cv.pdf" download>CV</a></li>
+                <li><a href="cv.pdf" download>CV</a></li>
                 <li><a href="https://scholar.google.com" target="_blank">Google Scholar</a></li>
                 <li><a href="https://github.com/Koustav-Chowdhury73" target="_blank">GitHub</a></li>
             </ul>
         </nav>
     </header>
 
-    <main>
-        <section class="contact-section">
-            <h2>Contact Information</h2>
-            <p>You can contact me via email at <strong>koustav@example.com</strong></p>
-        </section>
+    <main style="padding: 40px 5%;">
+        <h2>Contact</h2>
+        <p>You can reach me via email at: <strong>koustav@email.com</strong> (replace with actual)</p>
+        <p>Or connect with me on <a href="https://github.com/Koustav-Chowdhury73" target="_blank">GitHub</a> and <a href="https://scholar.google.com" target="_blank">Google Scholar</a>.</p>
     </main>
 
     <footer>
