--- a/contact.html
+++ b/contact.html
@@ -23,10 +23,12 @@
         </nav>
     </header>
 
-    <main style="padding: 40px 5%;">
-        <h2>Contact</h2>
-        <p>You can reach me via email at: <strong>koustav@email.com</strong> (replace with actual)</p>
-        <p>Or connect with me on <a href="https://github.com/Koustav-Chowdhury73" target="_blank">GitHub</a> and <a href="https://scholar.google.com" target="_blank">Google Scholar</a>.</p>
+    <main>
+        <div class="page-container">
+            <h2>Contact</h2>
+            <p>You can reach me via email at: <strong>koustav@email.com</strong> (replace with actual)</p>
+            <p>Or connect with me on <a href="https://github.com/Koustav-Chowdhury73" target="_blank">GitHub</a> and <a href="https://scholar.google.com" target="_blank">Google Scholar</a>.</p>
+        </div>
     </main>
 
     <footer>
