--- a/achievements.html
+++ b/achievements.html
@@ -25,8 +25,17 @@
 
     <main>
         <div class="page-container">
-            <h2>Achievements</h2>
-            <p>Coming soon: highlights of awards, scholarships, and competitive milestones.</p>
+             <h2>Academic Achievements</h2>
+        <ul>
+            <li>1. I am a receipient of the KVPY Scholarship (SA AIR: 443; SX AIR: 437)</li>
+            <li>2. Qualified NTSE Stage-I (Rank: 43) and JBNSTS with scholarship</li>
+            <li>3. JEE Mains: 99.967 percentile (AIR: 369)</li>
+            <li>4. JEE Advanced: AIR 808</li>
+            <li>5. WBJEE: Rank 5</li>
+            <li>6. ISI Entrance Test: Rank 17 with scholarship</li>
+            <li>7. Madhava Contest State-Level Qualification (Scholarship and TIFR Camp)</li>
+            <li>8. Prize money awarded for commendable marks in 1st, 3rd, and 4th semesters</li>
+        </ul>
         </div>
     </main>
 
