--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
         <section class="about-section">
             <div class="about-text">
                 <h2>About Me</h2>
-                <p>I am a third-year undergraduate student of Statistics at the Indian Statistical Institute, Kolkata, and a KVPY
-Fellow. My research interests include Machine Learning, Statistical Learning Theory, and Deep Learning. I also
-enjoy exploring topics in Mathematics, such as Graph Theory and Optimization Techniques. I am proficient in R,
-C, Python, LaTeX, MATLAB, MS Office, and G-Suite.</div>
+                <p>I am a first-year Master's student of Statistics (M.Stat) at the Indian Statistical Institute, Kolkata. I have
+also completed my Bachelor of Statistics (B.Stat) at the Indian Statistical Institute, Kolkata. I am also a
+KVPY Fellow. My research interests include Machine Learning, Statistical Learning Theory, and Optimization
+Theory, Clustering, and applications in these fields that address practical challenges. I thrive in inter-disciplinary
+environments. I am proficient in R, C, Python, LaTeX, MATLAB, MS Office, and G-Suite.</div>
             <div class="about-photo">
                 <img src="profile.jpg" alt="Profile Photo">
             </div>
@@ -38,7 +39,7 @@ C, Python, LaTeX, MATLAB, MS Office, and G-Suite.</div>
         <section class="section">
     <h2>Education</h2>
     <ul>
-        <li><strong>Bachelor of Statistics (B.Stat)</strong> — Indian Statistical Institute, Kolkata (2022–Present)</li>
+        <li><strong>Bachelor of Statistics (B.Stat)</strong> — Indian Statistical Institute, Kolkata (2022–2025)</li>
         <li><strong>Higher Secondary</strong> — Jenkins School, Cooch Behar, 2021-2022</li>
     </ul>
 </section>
